Fixed the menu items on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -220,7 +220,7 @@ header {
 
                 flex-direction: column;
 
-                align-items: center !important;
+                // align-items: center !important;
                 width: 100%;
 
                 ul {
@@ -233,6 +233,10 @@ header {
                         width: 100vw !important;
                         padding: .4rem 0;
 
+                        text-align: end;
+
+                        padding-right: 2rem !important;
+
                         // color: $hero-bg;
                         @include mixins.poppins-semibold;
                         font-size: 1.4rem;
@@ -240,10 +244,11 @@ header {
                         &::before {
                             background-color: $active-bg;
                             top: 100%;
-                            left: 1.5rem;
+                            // right: 1.5rem;
+                            right: 0;
 
                             height: 1px;
-                            width: 90%;
+                            width: 50%;
                         }
                     }
                 }
@@ -253,7 +258,7 @@ header {
                     z-index: 1;
 
                     width: fit-content;
-                    margin-inline: auto;
+                    margin-left: auto;
                     padding-top: 2rem;
                 }
             }
